# recLog3D

./: .gitignore  CMakeLists.txt  CylindricalCoordinateSystem.cpp  CylindricalCoordinateSystem.h  CylindricalPoint.h  IOHelper.cpp  IOHelper.h  MainLogReconstruction3D.cpp  README.md
data/: RGB_R_WSC2_Cloud.xyz  RGB_R_WSPS4_Cloud.xyz  WSC2_centerline.xyz  WSC2_clean.id  WSPS4_centerline.xyz  WSPS4_clean.id
